[package]
name = "be_voxel_rs"
version = "0.1.0"
authors = ["LemonHX <runzhe2001@hotmail.com>", "Ryuujo <me@ryuujo.com>"]
edition = "2018"

[dependencies]
# graphical
ash = "0.31.0"
# physics
nphysics3d = "0.16.1"
bvh = "0.3.2"
# linear math
nalgebra = "0.21.1"
# audio
ambisonic = "0.3.0"
rodio = "0.11.0"
# ecs
specs = { version = "0.16.1", features = ["specs-derive"] }
# AI
pathfinding = "2.0.4"
# utils
winit = "0.22.2"
serde = "1.0"
serde_json = "1.0"
image = "0.23.6"
# UI
raqote = "0.7.14"
font-kit = "0.5.0"

# platform
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["windef", "winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.18.0"
cocoa = "0.20.2"
objc = "0.2.7"
